--- a/CN.html
+++ b/CN.html
@@ -77,7 +77,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.png')">
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
 		<div class="heading">
 			<h1>你好，我是李浩哲</h1>
 			<!--
