--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.png')">
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
 		<div class="heading">
 			<h1>ALOHA, I'm Haozhe LI</h1>
 			<!--
