--- a/blogs/skills.html
+++ b/blogs/skills.html
@@ -463,11 +463,11 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Whops! It seems that you have come to a place where I have not yet ventured                  </p>
+                        Still building this block                  </p>
 
-                    <a href="https://www.haozheli.com">
+                    <a href="https://www.haozheli.com/uploads/HaozheLi_Resume.pdf">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            BACK TO HOME
+                            View more in my resume
                         </button>
                     </a>
                 </div>
