--- a/blogs/tutorial.html
+++ b/blogs/tutorial.html
@@ -465,7 +465,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         View my Davinci Resolve Tutorials below~                  </p>
 
-                    <a href="automation">
+                    <a href="automation.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             Automation - Davinci Resolve Tutorial
                         </button>
