--- a/CN.html
+++ b/CN.html
@@ -61,7 +61,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">关于</a>
             </li>
 			<li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#resume">履历</a>
+                <a class="nav-link js-scroll-trigger" href="#resume">简历</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#portfolio">作品集</a>
@@ -80,16 +80,13 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
 		<div class="heading">
 			<h1>你好，我是李浩哲</h1>
-			<!--
-            <p>Currently studying Computer Science and Music<br>at U of I Urbana-Champaign</p>
-            -->
-            <p>2023年的第一天，我的祖父离开了这个世界。<br>因此，直到1月7日，为了纪念我亲爱的祖父，这个网站将变成灰色。</p>
+            <p>欢迎来到我的个人博客网站</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>我爱</span>
 				<span class="cd-words-wrapper">
 					<b class="is-visible">编程</b>
 					<b>电影制作</b>
-					<b>调色</b>
+					<b>视频调色</b>
 					<b>特效</b>
                     <b>演奏大提琴</b>
 				</span>
@@ -148,7 +145,7 @@
 	<div id="resume" class="section wb">
         <div class="container">
             <div class="section-title text-left">
-                <h3>履历</h3>
+                <h3>简历</h3>
                 <p align="center">查看我的<a href="uploads/Haozhe Li_Resume.pdf">正式简历</a></p>
             </div><!-- end title -->
 
