--- a/blogs/education.html
+++ b/blogs/education.html
@@ -473,7 +473,7 @@
 
                     <p><br></p>
 
-                    <a href="https://www.haozheli.com/uploads/coursera.html">
+                    <a href="coursera.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             Coursera
                         </button>
