--- a/index.html
+++ b/index.html
@@ -323,5 +323,6 @@
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
 
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 </html>
