update trusted site

--- a/blogs/personalWebsite.html
+++ b/blogs/personalWebsite.html
@@ -487,5 +487,6 @@ I built my personal website in my spare time. I am very weak in HTML and CSS pro
 </div>
             </div>
         </div>
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </body>
 </html>
