--- a/404.html
+++ b/404.html
@@ -478,5 +478,6 @@
 </div>
             </div>
         </div>
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>    
     </body>
 </html>
