--- a/CN.html
+++ b/CN.html
@@ -316,6 +316,7 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 
 </body>
 </html>
