--- a/blogs/MP_CS124.html
+++ b/blogs/MP_CS124.html
@@ -494,5 +494,6 @@
 </div>
             </div>
         </div>
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </body>
 </html>
