--- a/blogs/Spaceneedle.html
+++ b/blogs/Spaceneedle.html
@@ -480,5 +480,6 @@
 </div>
             </div>
         </div>
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </body>
 </html>
