--- a/blogs/qingdaoSummer.html
+++ b/blogs/qingdaoSummer.html
@@ -491,5 +491,6 @@ The video supports DolbyVision 4K.
 </div>
             </div>
         </div>
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </body>
 </html>
