--- a/blogs/personalWebsite.html
+++ b/blogs/personalWebsite.html
@@ -479,6 +479,17 @@ I built my personal website in my spare time. I am very weak in HTML and CSS pro
                         </button>
                     </a>
 
+                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
+                        Also, my website supports https and is certificated by TrustedSite™. I promise, this site is a hundred percent safe!</p>
+
+                        <a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">
+                            <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            CHECK CERTIFICATE
+                            </button>
+                        </a>    
+
+
+
                 </div>
             </div>
 
