--- a/blogs/coursera.html
+++ b/blogs/coursera.html
@@ -463,7 +463,7 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        During high school and college, I have enrolled and finished several courses on Coursera.<br>Please check my certificate below~</p>
+                        During high school and college, I have enrolled and finished several courses on Coursera.<br><br>Please check my certificate below~</p>
 
                     <a href="https://coursera.org/share/13fa10ee52d9d4b93e68d458db4d596f">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
