--- a/CN.html
+++ b/CN.html
@@ -295,7 +295,7 @@
                         <a href="https://www.haozheli.com/download">下载</a>
                         <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">网站日志</a>
                     </p>
-                    <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持</p>
+                    <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持<br>该网站已经经过<a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">TrustedSite™</a>认证</p>
                 </div>
             </div>
         </div><!-- end container -->
