--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">Website Log</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#">Haozhe Li</a> <br>Powered By : 
-					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a></p>
+					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a><br>Certified By: <a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">TrustedSite™</a></p>
                 </div>
             </div>
         </div><!-- end container -->
