--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
 		<div class="heading">
 			<h1>ALOHA, I'm Haozhe LI</h1>
-            <p>Welcome to my own website<br>Have fun here~</p>
+            <p>An ordinary person who could not be more ordinary</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>I love </span>
 				<span class="cd-words-wrapper">
