--- a/CN.html
+++ b/CN.html
@@ -80,9 +80,9 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
 		<div class="heading">
 			<h1>你好，我是李浩哲</h1>
-            <p>欢迎来到我的个人博客网站</p>
+            <p>一个普通到再不能普通的普通人</p>
 			<h3 class="cd-headline clip is-full-width">
-				<span>我爱</span>
+				<span>我喜欢</span>
 				<span class="cd-words-wrapper">
 					<b class="is-visible">编程</b>
 					<b>电影制作</b>
@@ -125,11 +125,11 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2><b>关于我</b></h2>
-                        <p>大家好，我是李浩哲，或者叫我的英文名Howard，我是伊利诺伊大学计算机科学和音乐专业的学生。“一个热爱编程的大提琴手”是可以定义我的最准确的说法。我从小就学习大提琴，作为首席大提琴手参加交响乐团快10年了。进入大学生活后，我逐渐对计算机编程产生了兴趣，并开始学习Python、Java等编程语言。</p>
-						<p>我也是一个个人视频创作者，我经常在哔哩哔哩和Youtube上上传VLOG和视频特效的教程，并获得了数百万次观看。</p>
+                        <p>大家好，我是李浩哲，或者叫我的英文名Howard，我是伊利诺伊大学计算机科学和音乐专业的学生。“一个热爱编程的大提琴手”是可以定义我的最准确的说法。我从小就学习大提琴，并且作为首席大提琴手参加交响乐团快10年了。进入大学生活后，我逐渐对计算机编程产生了兴趣，并开始学习Python、Java等编程语言。</p>
+						<p>与此同时，我还是一名个人视频创作者。我经常在哔哩哔哩和Youtube上上传VLOG和视频特效的教程，并获得了数百万次观看。</p>
                         <p>快速链接：</p>
                         <a href="https://www.haozheli.com/contact.html" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>联系</span></a>
-                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>履历</span></a>
+                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>简历</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
