update contact form

--- a/CN.html
+++ b/CN.html
@@ -67,7 +67,7 @@
                 <a class="nav-link js-scroll-trigger" href="#portfolio">作品集</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact.html">联系</a>
+                <a class="nav-link js-scroll-trigger" href="#contact">联系</a>
               </li> 
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com">English</a>
@@ -282,6 +282,54 @@
 			</div>
 			</div>
 		</div>
+    
+        <div id="contact" class="section db">
+            <div class="container">
+                <div class="section-title text-left">
+                    <h3>联系我</h3>
+                    <p>很高兴能与您取得联系！ </p>
+                </div><!-- end title -->
+    
+                                <form action="https://formspree.io/f/mzbqbwod" method="POST">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="contact_form">
+                                                <div id="message"></div>
+                                                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                                                    <div class="row">
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <input class="form-control" name="name" id="name" type="text" placeholder="姓名" required="required" data-validation-required-message="请输入您的姓名">
+                                                                <p class="help-block text-danger"></p>
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <input class="form-control" name="email" id="email" type="email" placeholder="电子邮箱地址" required="required" data-validation-required-message="请输入您的电子邮箱地址">
+                                                                <p class="help-block text-danger"></p>
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <input class="form-control" name="subject" id="subject" placeholder="主题">
+                                                                <p class="help-block text-danger"></p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <textarea class="form-control" name="message" id="message" placeholder="留言" required="required" data-validation-required-message="请留言"></textarea>
+                                                                <p class="help-block text-danger"></p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="clearfix"></div>
+                                                        <div class="col-lg-12 text-center">
+                                                            <div id="success"></div>
+                                                            <button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="发送邮件" type="submit">发送邮件</button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div><!-- end col -->
+                                    </div><!-- end row -->
+                                    </form>
+            </div><!-- end container -->
+        </div><!-- end section -->
 	
 
     <div class="copyrights">
@@ -289,11 +337,11 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                        <a href="#">导航:：</a>
-                        <a href="https://www.haozheli.com">回到主页</a>
-                        <a href="https://www.haozheli.com/contact.html">联系方式</a>
-                        <a href="https://www.haozheli.com/download">下载</a>
-                        <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">网站日志</a>
+                        <a href="#">链接：</a>
+                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">哔哩哔哩</a>
+                        <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
+                        <a href="https://www.instagram.com/howardli04/">Instagram</a>
+                        <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                     </p>
                     <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持<br>该网站已经经过<a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">TrustedSite™</a>认证</p>
                 </div>
