--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact.html">CONTACT</a>
+                <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
               </li> 
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="CN.html">中文</a>
@@ -289,16 +289,64 @@
 		</div>
 	</div>
 
+    <div id="contact" class="section db">
+        <div class="container">
+            <div class="section-title text-left">
+                <h3>Contact</h3>
+                <p>I am very much looking forward to getting touch with you! </p>
+            </div><!-- end title -->
+
+                            <form action="https://formspree.io/f/mzbqbwod" method="POST">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="contact_form">
+                                            <div id="message"></div>
+                                            <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <div class="form-group">
+                                                            <input class="form-control" name="name" id="name" type="text" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+                                                            <p class="help-block text-danger"></p>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <input class="form-control" name="email" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+                                                            <p class="help-block text-danger"></p>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <input class="form-control" name="subject" id="subject" placeholder="Your Subject">
+                                                            <p class="help-block text-danger"></p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <div class="form-group">
+                                                            <textarea class="form-control" name="message" id="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                                                            <p class="help-block text-danger"></p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="clearfix"></div>
+                                                    <div class="col-lg-12 text-center">
+                                                        <div id="success"></div>
+                                                        <button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="Send Message" type="submit">Send Message</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div><!-- end col -->
+                                </div><!-- end row -->
+                                </form>
+        </div><!-- end container -->
+    </div><!-- end section -->
+
     <div class="copyrights">
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                        <a href="#">Navigation: </a>
-                        <a href="https://www.haozheli.com">Back to Home</a>
-                        <a href="https://www.haozheli.com/contact.html">Contact</a>
-                        <a href="https://www.haozheli.com/download">Download</a>
-                        <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">Website Log</a>
+                        <a href="#">Links: </a>
+                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
+                        <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
+                        <a href="https://www.instagram.com/howardli04/">Instagram</a>
+                        <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#">Haozhe Li</a> <br>Powered By : 
 					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a><br>Certified By: <a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">TrustedSite™</a></p>
