--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
               </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
-              </li> 
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="CN.html">中文</a>
               </li>   
           </ul>
+          <select onchange="window.location=this.value;">
+            <option value="">Please Select Your Language</option>
+            <option value="index.html">English</option>
+            <option value="CN.html">中文</option>
+            <option value="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
+        </select> 
         </div>
       </div>
     </nav>
@@ -90,7 +93,7 @@
 					<b>FILMMAKING</b>
 					<b>COLOR GRADING</b>
 					<b>Visual Effects</b>
-                    			<b>PLAYING CELLO</b>
+                    <b>PLAYING CELLO</b>
 				</span>
 			</h3>
 		</div>
@@ -130,7 +133,7 @@
                         <p> Hi, I'm Haozhe Li, or Howard, and I'm a computer science and music major at the University of Illinois.	"A cellist who loves programming" is the most accurate statement that can define me. I have studied cello since I was a child and participated in symphony orchestras for almost 10 years as a principal cellist. After entering college life, I gradually became interested in computer programming and began to learn programming languages such as Python and Java.</p>
 						<p> I am also a personal video creator, I often upload tutorials on VLOG, cinematic shots and video editing effects on Bilibili and Youtube， and have received millions of views.</p>
                         <p>Quick Links: </p>
-                        <a href="https://www.haozheli.com/contact.html" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT</span></a>
+                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT</span></a>
                         <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>RESUME</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
