--- a/blogs_CN/MP_CS124.html
+++ b/blogs_CN/MP_CS124.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Tutorial</title>
+<title>Machine Project CS124</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,47 +458,39 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        TUTORIAL                    </div>
+                        机器项目 - CS 124                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        View my Davinci Resolve Tutorials below~                  </p>
+                        机器项目是CS124的一个非常重要的部分，也是我最喜欢的部分之一。在MP3中，我们可以在Android程序中添加一些自定义的功能。下面是我对这些功能的介绍，以及Android程序的DEMO              </p>
 
-                    <a href="automation.html">
+                    <a href="https://www.bilibili.com/video/BV1ad4y1s7yu/?vd_source=50c60dd066c2d71108664951f25b60a4">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Automation - Davinci Resolve Tutorial
+                            BILIBILI
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="slomotion.html">
+                    <a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Super Slomotion - Davinci Resolve Tutorial
+                            YOUTUBE
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="magicMask.html">
+                    <a href="https://www.haozheli.com/uploads/demo.apk">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            MagicMask - Davinci Resolve Tutorial
-                        </button>
-                    </a>
-
-                    <p><br></p>
-
-                    <a href="visualEffects.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Visual Effects in 90 Seconds - Davinci Resolve Tutorial
+                            下载DEMO
                         </button>
                     </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/tutorial.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/machineProject.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
