--- a/index.html
+++ b/index.html
@@ -350,9 +350,15 @@
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/howardli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
+                        <select onchange="window.location=this.value;">
+                            <option value="">Please Select Your Language</option>
+                            <option value="index.html">English</option>
+                            <option value="CN.html">中文</option>
+                            <option value="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
+                        </select>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#">Haozhe Li</a> <br>Powered By : 
-					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a><br>Certified By: <a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">TrustedSite™</a></p>
+					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a></p>
                 </div>
             </div>
         </div><!-- end container -->
