--- a/CN.html
+++ b/CN.html
@@ -159,10 +159,10 @@
 						<div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>教育（1/4）</h3>
-                                <p class="lead">伊利诺伊大学香槟分校<br>计算机科学+音乐学士2022-2026<br>目前平均绩点：4.0<br><br></p>
+                                <p class="lead">伊利诺伊大学厄巴纳-香槟分校<br>计算机科学+音乐学士2022-2026<br>目前平均绩点：4.0<br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs/education.html"><b>查看更多</b></a>
+                                <a href="blogs_CN/education.html"><b>查看更多</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -174,7 +174,7 @@
                                 <p class="lead">编程：Java，Python<br>语言：英语和汉语母语<br>影片制作<br>音乐制作<br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs/skills.html"><b>查看更多</b></a>
+                                <a href="blogs_CN/skills.html"><b>查看更多</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
@@ -185,7 +185,7 @@
                                 <p class="lead">ZNotes内容贡献<br><br><br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs/experience.html"><b>查看更多</b></a>
+                                <a href="blogs_CN/experience.html"><b>查看更多</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
@@ -196,7 +196,7 @@
                                 <p class="lead">还没找到。<br>还在找一个！<br><br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs/intern.html"><b>查看更多</b></a>
+                                <a href="blogs_CN/intern.html"><b>查看更多</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
@@ -231,7 +231,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/machineProject.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs/MP_CS124.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_CN/MP_CS124.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -240,7 +240,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/personalWebsite.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs/personalWebsite.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_CN/personalWebsite.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -249,7 +249,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/vlog.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs/vlog.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_CN/vlog.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -258,7 +258,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/photography.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs/photography.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_CN/photography.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -267,7 +267,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/tutorial.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs/tutorial.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_CN/tutorial.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -276,7 +276,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/musicProduction.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs/musicProduction.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_CN/musicProduction.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -346,7 +346,7 @@
                         <a href="https://www.instagram.com/howardli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                     </p>
-                    <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持<br>该网站已经经过<a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">TrustedSite™</a>认证</p>
+                    <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持</p>
                 </div>
             </div>
         </div><!-- end container -->
