--- a/blogs/photography.html
+++ b/blogs/photography.html
@@ -437,7 +437,7 @@
                 font-size: 1.875rem;
             }
 
-            .md\:text-15xl {
+            .md\:text-10xl {
                 font-size: 9rem;
             }
 
@@ -458,7 +458,7 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        Photo                    </div>
+                        PHOTOGRAPHY                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
