--- a/blogs_CN/coursera.html
+++ b/blogs_CN/coursera.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Tutorial</title>
+<title>Coursera</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,47 +458,40 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        TUTORIAL                    </div>
+                        COURSERA                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        View my Davinci Resolve Tutorials below~                  </p>
+                        在高中和大学期间，我曾在Coursera上报名并完成了几门课程。<br><br>请查看我的课程结业证书</p>
 
-                    <a href="automation.html">
+                    <a href="https://coursera.org/share/13fa10ee52d9d4b93e68d458db4d596f">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Automation - Davinci Resolve Tutorial
+                            了解爱因斯坦：狭义相对论
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="slomotion.html">
+                    <a href="https://coursera.org/share/1b76313c0d603cb7e7f1b3d7e7a26ca1">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Super Slomotion - Davinci Resolve Tutorial
+                            Python速成班
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="magicMask.html">
+                    <a href="https://coursera.org/share/af43fc0a0b9fd68cf0698dba7b6ef482">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            MagicMask - Davinci Resolve Tutorial
+                            使用Python与交互系统的应用
                         </button>
                     </a>
 
-                    <p><br></p>
-
-                    <a href="visualEffects.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Visual Effects in 90 Seconds - Davinci Resolve Tutorial
-                        </button>
-                    </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/tutorial.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/coursera.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
