--- a/blogs_CN/education.html
+++ b/blogs_CN/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Tutorial</title>
+<title>教育</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,47 +458,31 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        TUTORIAL                    </div>
+                        教育                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        View my Davinci Resolve Tutorials below~                  </p>
+                        伊利诺伊大学厄巴纳-香槟分校 2022 - 2026<br>计算机科学+音乐理学士                  </p>
 
-                    <a href="automation.html">
+                    <a href="https://www.haozheli.com/uploads/academicHistory.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Automation - Davinci Resolve Tutorial
+                            学术记录
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="slomotion.html">
+                    <a href="coursera.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Super Slomotion - Davinci Resolve Tutorial
-                        </button>
-                    </a>
-
-                    <p><br></p>
-
-                    <a href="magicMask.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            MagicMask - Davinci Resolve Tutorial
-                        </button>
-                    </a>
-
-                    <p><br></p>
-
-                    <a href="visualEffects.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Visual Effects in 90 Seconds - Davinci Resolve Tutorial
+                            Coursera
                         </button>
                     </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/tutorial.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/education.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
