--- a/blogs_CN/personalWebsite.html
+++ b/blogs_CN/personalWebsite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Tutorial</title>
+<title>个人网站</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,47 +458,45 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        TUTORIAL                    </div>
+                        个人网站                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        View my Davinci Resolve Tutorials below~                  </p>
+                        我在业余时间建立了我的个人网站。我在HTML和CSS编程方面非常薄弱，这个网站中的大部分页面都是我按照谷歌上的教程学习的。这个网站是建立在Github页面上的，所以你也可以在Github上看到这个网站的公共资源库。祝您愉快!                </p>
 
-                    <a href="automation.html">
+                    <a href="https://www.haozheli.com/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Automation - Davinci Resolve Tutorial
+                        访问我的网站
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="slomotion.html">
+                    <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Super Slomotion - Davinci Resolve Tutorial
+                        访问Github
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="magicMask.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            MagicMask - Davinci Resolve Tutorial
-                        </button>
-                    </a>
+                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
+                        此外，我的网站支持https，并通过了TrustedSite™认证。我保证，这个网站是百分之百的安全!</p>
 
-                    <p><br></p>
+                        <a href="https://www.trustedsite.com/verify?js=1&host=haozheli.com">
+                            <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            访问证书
+                            </button>
+                        </a>    
 
-                    <a href="visualEffects.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Visual Effects in 90 Seconds - Davinci Resolve Tutorial
-                        </button>
-                    </a>
+
+
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/tutorial.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/personalWebsite.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
