--- a/blogs_CN/qingdaoSummer.html
+++ b/blogs_CN/qingdaoSummer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Tutorial</title>
+<title>Qingdao Summer</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,47 +458,36 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        TUTORIAL                    </div>
+                        QINGDAO SUMMER                   </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        View my Davinci Resolve Tutorials below~                  </p>
+                        6月初，我高中毕业后去青岛短途旅行。
+该视频支持DolbyVision 4K。
+               </p>
+                    
+                    <p><br></p>    
 
-                    <a href="automation.html">
+                    <a href="https://www.bilibili.com/video/BV1ba411u79C/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Automation - Davinci Resolve Tutorial
+                            BILIBILI
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="slomotion.html">
+                    <a href="https://www.youtube.com/watch?v=fdMdneL_YtU">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Super Slomotion - Davinci Resolve Tutorial
+                            YOUTUBE
                         </button>
                     </a>
 
-                    <p><br></p>
-
-                    <a href="magicMask.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            MagicMask - Davinci Resolve Tutorial
-                        </button>
-                    </a>
-
-                    <p><br></p>
-
-                    <a href="visualEffects.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Visual Effects in 90 Seconds - Davinci Resolve Tutorial
-                        </button>
-                    </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/tutorial.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/qingdao.jpeg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
