--- a/blogs_CN/tutorial.html
+++ b/blogs_CN/tutorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Tutorial</title>
+<title>教程</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,14 +458,14 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        TUTORIAL                    </div>
+                        教程                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        View my Davinci Resolve Tutorials below~                  </p>
+                        请看下面我的Davinci Resolve教程                 </p>
 
-                    <a href="automation.html">
+                    <a href="https://www.haozheli.com/blogs_CN/automation.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             Automation - Davinci Resolve Tutorial
                         </button>
@@ -473,7 +473,7 @@
 
                     <p><br></p>
 
-                    <a href="slomotion.html">
+                    <a href="https://www.haozheli.com/blogs_CN/slomotion.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             Super Slomotion - Davinci Resolve Tutorial
                         </button>
@@ -481,7 +481,7 @@
 
                     <p><br></p>
 
-                    <a href="magicMask.html">
+                    <a href="https://www.haozheli.com/blogs_CN/magicMask.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             MagicMask - Davinci Resolve Tutorial
                         </button>
@@ -489,7 +489,7 @@
 
                     <p><br></p>
 
-                    <a href="visualEffects.html">
+                    <a href="https://www.haozheli.com/blogs_CN/visualEffects.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             Visual Effects in 90 Seconds - Davinci Resolve Tutorial
                         </button>
