--- a/CN.html
+++ b/CN.html
@@ -70,12 +70,6 @@
                 <a class="nav-link js-scroll-trigger" href="#contact">联系</a>
               </li>  
           </ul>
-          <select onchange="window.location=this.value;">
-            <option value="">请选择您的语言</option>
-            <option value="index.html">English</option>
-            <option value="CN.html">中文</option>
-            <option value="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
-        </select> 
         </div>
       </div>
     </nav>
@@ -345,6 +339,13 @@
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/howardli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
+                        <select onchange="window.location=this.value;">
+                            <option value="">Please Select Your Language</option>
+                            <option value="index.html">Auto</option>
+                            <option value="EN.html">English</option>
+                            <option value="CN.html">中文</option>
+                            <option value="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
+                        </select>
                     </p>
                     <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持</p>
                 </div>
