--- a/CN.html
+++ b/CN.html
@@ -296,11 +296,11 @@
                                                     <div class="row">
                                                         <div class="col-md-6">
                                                             <div class="form-group">
-                                                                <input class="form-control" name="name" id="name" type="text" placeholder="姓名" required="required" data-validation-required-message="请输入您的姓名">
+                                                                <input class="form-control" name="name" id="name" type="text" placeholder="姓名（必填）" required="required" data-validation-required-message="请输入您的姓名">
                                                                 <p class="help-block text-danger"></p>
                                                             </div>
                                                             <div class="form-group">
-                                                                <input class="form-control" name="email" id="email" type="email" placeholder="电子邮箱地址" required="required" data-validation-required-message="请输入您的电子邮箱地址">
+                                                                <input class="form-control" name="email" id="email" type="email" placeholder="电子邮箱地址（必填）" required="required" data-validation-required-message="请输入您的电子邮箱地址">
                                                                 <p class="help-block text-danger"></p>
                                                             </div>
                                                             <div class="form-group">
@@ -310,7 +310,7 @@
                                                         </div>
                                                         <div class="col-md-6">
                                                             <div class="form-group">
-                                                                <textarea class="form-control" name="message" id="message" placeholder="留言" required="required" data-validation-required-message="请留言"></textarea>
+                                                                <textarea class="form-control" name="message" id="message" placeholder="留言（必填）" required="required" data-validation-required-message="请留言"></textarea>
                                                                 <p class="help-block text-danger"></p>
                                                             </div>
                                                         </div>
@@ -337,13 +337,13 @@
                         <a href="#">链接：</a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">哔哩哔哩</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
-                        <a href="https://www.instagram.com/howardli04/">Instagram</a>
+                        <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                         <select onchange="window.location=this.value;">
-                            <option value="">Please Select Your Language</option>
+                            <option value="">请选择您的语言</option>
                             <option value="index.html">Auto</option>
                             <option value="EN.html">English</option>
-                            <option value="CN.html">中文</option>
+                            <option value="CN.html">简体中文</option>
                             <option value="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
                         </select>
                     </p>
