--- a/EN.html
+++ b/EN.html
@@ -302,11 +302,11 @@
                                                 <div class="row">
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <input class="form-control" name="name" id="name" type="text" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+                                                            <input class="form-control" name="name" id="name" type="text" placeholder="Your Name (Required)" required="required" data-validation-required-message="Please enter your name.">
                                                             <p class="help-block text-danger"></p>
                                                         </div>
                                                         <div class="form-group">
-                                                            <input class="form-control" name="email" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+                                                            <input class="form-control" name="email" id="email" type="email" placeholder="Your Email (Required)" required="required" data-validation-required-message="Please enter your email address.">
                                                             <p class="help-block text-danger"></p>
                                                         </div>
                                                         <div class="form-group">
@@ -316,7 +316,7 @@
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <textarea class="form-control" name="message" id="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                                                            <textarea class="form-control" name="message" id="message" placeholder="Your Message (Required)" required="required" data-validation-required-message="Please enter a message."></textarea>
                                                             <p class="help-block text-danger"></p>
                                                         </div>
                                                     </div>
@@ -342,13 +342,13 @@
                         <a href="#">Links: </a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
-                        <a href="https://www.instagram.com/howardli04/">Instagram</a>
+                        <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <select onchange="window.location=this.value;">
                             <option value="">Please Select Your Language</option>
                             <option value="index.html">Auto</option>
                             <option value="EN.html">English</option>
-                            <option value="CN.html">中文</option>
+                            <option value="CN.html">简体中文</option>
                             <option value="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
                         </select>
                     </p>
