--- a/blogs/tutorial.html
+++ b/blogs/tutorial.html
@@ -481,7 +481,7 @@
 
                     <p><br></p>
 
-                    <a href="magicMask.html">
+                    <a href="magicmask.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             MagicMask - Davinci Resolve Tutorial
                         </button>
