--- a/blogs_CN/tutorial.html
+++ b/blogs_CN/tutorial.html
@@ -465,7 +465,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         请看下面我的Davinci Resolve教程                 </p>
 
-                    <a href="https://www.haozheli.com/blogs_CN/automation.html">
+                    <a href="automation.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             【90秒】达芬奇智能全自动功能 新手向 干货教程
                         </button>
@@ -473,7 +473,7 @@
 
                     <p><br></p>
 
-                    <a href="https://www.haozheli.com/blogs_CN/slomotion.html">
+                    <a href="slomotion.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             【一分钟】使用达芬奇制作超级慢动作 简单易懂 干货教程
                         </button>
@@ -481,15 +481,15 @@
 
                     <p><br></p>
 
-                    <a href="https://www.haozheli.com/blogs_CN/magicMask.html">
+                    <a href="magicmask.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            MagicMask - Davinci Resolve Tutorial
+                            【一分钟】将文字完美融入画面（终极版）全自动扣像 达芬奇教程 干货
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="https://www.haozheli.com/blogs_CN/visualEffects.html">
+                    <a href="visualEffects.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             【90秒】 三个炫酷跟踪效果 超干货 新手向 达芬奇教程
                         </button>
