--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
         if (language.indexOf("zh-") !== -1) {
             window.location = 'CN.html'
         } else if (language.indexOf('en') !== -1) {
-            window.location = 'index.html'
+            window.location = 'EN.html'
         } else {
             //其它的都使用英文
-            window.location = 'index.html'
+            window.location = 'EN.html'
         }
     </script>
 </body>
