--- a/blogs/vlog.html
+++ b/blogs/vlog.html
@@ -464,6 +464,14 @@
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         Please see my VLOGs below~                 </p>
+                    
+                    <a href="seattle.html">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            Seattle - My last trip in 2022
+                        </button>
+                    </a>
+
+                    <p><br></p>
 
                     <a href="qingdaoSummer.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
