--- a/blogs_CN/vlog.html
+++ b/blogs_CN/vlog.html
@@ -467,9 +467,11 @@
 
                     <a href="seattle.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Seattle - My last trip in 2022
+                            西雅图 - 我在2022年的最后旅程
                         </button>
                     </a>
+
+                    <p><br></p>
 
                         <a href="qingdaoSummer.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
