--- a/blogs/intern.html
+++ b/blogs/intern.html
@@ -465,7 +465,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         Nothing Yet! If you have any good idea, please do let me know!                  </p>
 
-                    <a href="https://www.haozheli.com/contact.html">
+                    <a href="https://www.haozheli.com/EN.html#contact">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             CONTACT
                         </button>
