--- a/blogs/skills.html
+++ b/blogs/skills.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>404 Not Found</title>
+<title>Skills</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -463,13 +463,12 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Still building this block                  </p>
-
-                    <a href="https://www.haozheli.com/uploads/HaozheLi_Resume.pdf">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            View more in my resume
-                        </button>
-                    </a>
+                        Programming: Basic Java, Python programming; Knowledge of html, javascript programming; Machine Learning in progress<br><br>
+                        Filmmaking: Skillful in using computer software (Davinci Resolve and PR) to edit video clips; Basic in color grading; Basic Fusion and After Effects to creare visual effects<br><br> 
+                        Photography: Proficient in using the camera and edit photo (using affinity and Luminar)<br><br>
+                        Music Production: Proficient in using software for music dictation; Basic master mixing with Logic Pro<br><br>
+                        Language: Native in Chinese and English<br><br>
+                        Other: Proficient in using Microsoft 365                    </p>
                 </div>
             </div>
 
