--- a/blogs_CN/intern.html
+++ b/blogs_CN/intern.html
@@ -458,14 +458,14 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        INTERN                    </div>
+                        实习                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Nothing Yet! If you have any good idea, please do let me know!                  </p>
+                        目前还没有! 如果你有任何好的想法，请告诉我!                  </p>
 
-                    <a href="https://www.haozheli.com/contact.html">
+                    <a href="https://www.haozheli.com/CN.html#contact">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             CONTACT
                         </button>
