--- a/blogs_CN/skills.html
+++ b/blogs_CN/skills.html
@@ -463,13 +463,12 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Still building this block                  </p>
-
-                    <a href="https://www.haozheli.com/uploads/HaozheLi_Resume.pdf">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            View more in my resume
-                        </button>
-                    </a>
+                        编程：基本的Java、Python编程；了解html、javascript编程；正在进行机器学习<br><br>
+                        电影制作：熟练使用计算机软件（Davinci Resolve和PR）来编辑视频片段；基本的调色；基本的融合和After Effects来创造视觉效果。<br><br> 
+                        摄影：熟练使用相机和编辑照片（使用affinity和Luminar）。<br><br>
+                        音乐制作：熟练使用软件进行音乐听写；用Logic Pro进行基本的主混音<br><br>
+                        语言：汉语、英语母语水平<br><br>
+                        其他：熟练使用Microsoft 365套件                    </p>
                 </div>
             </div>
 
