--- a/blogs_CN/seattle.html
+++ b/blogs_CN/seattle.html
@@ -465,7 +465,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         请欣赏我在西雅图旅行的VLOG合集</p>
 
-                    <a href="basketballUW.html">
+                    <a href="https://www.bilibili.com/video/BV118411K7ZQ/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             我在西雅图的#VLOG ｜ 在华大球馆打球“走步”上双
                         </button>
@@ -473,13 +473,15 @@
 
                     <p><br></p>
 
-                    <a href="spaceNeedleVlog.html">
+                    <a href="https://www.bilibili.com/video/BV1Ev4y1q7yw/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             我在西雅图的#VLOG ｜ 放假去太空针塔玩！
                         </button>
                     </a>
 
-                    <a href="smithTower.html">
+                    <p><br></p>
+
+                    <a href="https://www.bilibili.com/video/BV1744y1o71R/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             西雅图必去：史密斯塔 Smith Tower
                         </button>
