--- a/blogs/seattle.html
+++ b/blogs/seattle.html
@@ -465,7 +465,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         This is a whole serie of vlogs about my trip in Seattle</p>
 
-                    <a href="basketballUW.html">
+                    <a href="https://www.youtube.com/watch?v=vHPOfb4Ef38&t=1s">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             Playing basketball in University of Washington
                         </button>
@@ -473,13 +473,15 @@
 
                     <p><br></p>
 
-                    <a href="spaceNeedleVlog.html">
+                    <a href="https://www.youtube.com/watch?v=K53h5JY1hA8&t=2s">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             A day spent on Space Needle - Above Seattle
                         </button>
                     </a>
 
-                    <a href="smithTower.html">
+                    <p><br></p>
+
+                    <a href="https://youtube.com/shorts/095loeQWSfU">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             Nightview of skyline Seattle - Smith Tower
                         </button>
